$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-21 (opened July 4, 2009)

	* wcmdscale: returns negative eigevalues scaled by
	sqrt(abs(eigenvalues)) if 'k' is not given or 'k' would include
	any negative eigenvalue.
	
Version 1.16-20 (closed July 4, 2009)

	* new version opened concurrently with the release of vegan 1.15-3
	on June 17, 2009.

	* orditorp: works now when axes are reversed like xlim = c(1,-1).

	* rrarefy: a new function to generate randomly rarefied
	communities.

	* betadisper: fix bug in removal of (effectively) zero Eigenvalues.

	* summary.cca: takes care that all scores have rownames --
	head/tail fail without names. No  ugly printing for constrained
	eigenvalues when these do not exist in unconstrained models.

	* biplot.rda: honour args to scores ('scaling', 'const').

	* points/text for cca: accept 'const' argument for rda scores.

	* ordilabel: no superfluous warnigns when args ('scaling',
	'const') are given to scores.

	* ordiplot3d: honour args to scores ('scaling', 'const') and
	without warnings.

	* ordixyplot: honour ags to scores ('scaling', 'const'). 

	* spantree: plot honours args to scores ('scaling', 'const'). 
	
Version 1.16-19 (closed June 17, 2009)

	* capscale: handles now negative eigenvalues with semimetric
	indices. These cause no more warnings. The MDS engine is now
	'wcmdscale' instead of 'cmdscale' unless 'add = TRUE' was
	specified (and then negative eigenvalues are not produced). The
	negative eigenvalues are listed after positive unconstrained
	eigenvalues, but no scores are given for them. The total inertia
	is now the sum of all eigenvalues, including the negative ones,
	and inertia components adds item 'Imaginary' for negative
	eigenvalues after 'Uncostrained'. New argument 'sqrt.dist' makes
	square root transformation of dissimilarities, producing metric
	indices in many cases (e.g., Bray-Curtis, Jaccard). Help page and